--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <button class="btn-success mt-4 w-100 bg-primary text-light">
+    <button class="btn-success mt-4 w-100 bg-primary text-light" data-bs-toggle="modal" data-bs-target="#exampleModal">
       <i class="fa fa-plus"></i>
       Add Product
     </button>
@@ -21,5 +21,26 @@
 </div>
 
 
-
-<!---->
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h1 class="modal-title fs-5" id="exampleModalLabel">Add Product</h1>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <div class="form-group">
+          <label for="productName">Product Name</label>
+          <input type="text" id="productName" class="form-control">
+        </div>
+        <div class="form-group mt-2">
+          <label for="productimage">Product Image</label>
+          <input type="text" id="productimage" class="form-control">
+        </div>
+        <div class="form-group mt-2">
+          <button class="btn btn-primary w-100">Create Product</button> <!--w-100 butonu uzatmayı sağladı. -->
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
