--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -7,13 +7,11 @@
   <hr>
 
   <div class="row">
-    <div class="col-md-3 mt-2" *ngFor="let pr of products"> <!--col-md-3 == 1 satırda 4 kolon olsun  anlamına geliyor//// mt-2 rowlar arasında boşluk olsun anlamına geliyor. // ngFor ile ts dosyasındaki products arrayindeki elemanlar kadar kayıt üret diyoruz.-->
+    <div class="col-md-3 mt-2" *ngFor="let product of products"> <!--col-md-3 == 1 satırda 4 kolon olsun  anlamına geliyor//// mt-2 rowlar arasında boşluk olsun anlamına geliyor. // ngFor ile ts dosyasındaki products arrayindeki elemanlar kadar kayıt üret diyoruz.-->
       <div class="card" style="width: 18rem;">
-        <img src="https://onlineapi.cagri.com/api/v1/pub/products/img/50995/1/532" class="card-img-top" alt="...">
+        <img [src]="product.productImage" class="card-img-top" alt="...">
         <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
+          <h5 class="card-title">{{product.productName}}</h5>
         </div>
       </div>
     </div>
@@ -31,14 +29,16 @@
       <div class="modal-body">
         <div class="form-group">
           <label for="productName">Product Name</label>
-          <input type="text" id="productName" class="form-control">
+          <input type="text" [(ngModel)]="product.productName" id="productName" class="form-control">
         </div>
         <div class="form-group mt-2">
           <label for="productimage">Product Image</label>
-          <input type="text" id="productimage" class="form-control">
+          <input type="text" [(ngModel)]="product.productImage" id="productimage" class="form-control">
         </div>
         <div class="form-group mt-2">
-          <button class="btn btn-primary w-100">Create Product</button> <!--w-100 butonu uzatmayı sağladı. -->
+          <button class="btn btn-primary w-100" (click)="createProduct()">
+            Create Product
+          </button> <!--w-100 butonu uzatmayı sağladı. -->
         </div>
       </div>
     </div>
