--- a/src/app/components/layouts/layouts.component.html
+++ b/src/app/components/layouts/layouts.component.html
@@ -13,6 +13,7 @@
           <a class="nav-link active text-light" aria-current="page" href="#">
             <i class="fa fa-basket-shopping"></i>
             Cart
+            <span class="badge text-bg-danger">{{ baskets.length }}</span>
           </a>
         </li>
       </ul>
