--- a/src/app/components/layouts/layouts.component.html
+++ b/src/app/components/layouts/layouts.component.html
@@ -10,7 +10,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link active text-light" aria-current="page" href="#">
+          <a class="nav-link active text-light" routerLink="/basket" aria-current="page" href="#">
             <i class="fa fa-basket-shopping"></i>
             Cart
             <span class="badge text-bg-danger">{{ baskets.length }}</span>
